# cpi

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  RELEASE_CHECKLIST.md  bench_llama2.bat  install.bat  install.sh  install_deps.bat  install_deps.sh  requirements.txt  run_cpu.bat  run_cpu_llama2.bat  run_llama2.bat  run_tinyllama.bat  start_docker.bat  start_docker.sh  start_local.bat  start_local.sh  start_web.bat  start_web.sh
.github/workflows/: cuda-moe-regression.yml
include/: common.hpp
include/app/: main_cli.hpp  main_helpers.hpp  main_modes.hpp
include/engine/: cpu_engine.hpp  engine_types.hpp  llama4_cpu_engine.hpp  llama4_cuda_engine.hpp  llama_engine.hpp  qwen35_cpu_engine.hpp  qwen35_cuda_engine.hpp  tensor_parallel.hpp
include/model/: hf_bpe_tokenizer.hpp  llama_config.hpp  safetensors_loader.hpp  tokenizer.hpp  weight_loader.hpp
include/platform/: mmap_file.hpp
include/runtime/: cuda_utils.cuh  kernels.cuh  kv_cache.hpp  system_info.hpp
reports/: phimoe_validation_report_2026-04-07.md
src/: main.cpp
src/app/: main_cli.cpp  main_helpers.cpp  main_modes.cpp
src/engine/: cpu_engine.cpp  llama4_cpu_engine.cpp  llama4_cuda_engine.cu  llama4_cuda_engine_setup.cu  llama_engine.cpp  llama_engine_cache.cpp  llama_engine_cache_streaming.cpp  llama_engine_forward.cpp  llama_engine_forward_decode.cpp  llama_engine_generation.cpp  llama_engine_graph.cpp  llama_engine_internal.hpp  llama_engine_lifecycle.cpp  llama_engine_lowbit_utils.cpp  llama_engine_parity.cpp  llama_engine_sampling.cpp  llama_engine_sampling_utils.cpp  llama_engine_tuning.cpp  qwen35_cpu_engine.cpp  qwen35_cuda_engine.cu  tensor_parallel.cpp
src/kernels/: kernels.cu  kernels_attention_decode.cu  kernels_attention_decode_int4.cu  kernels_ops_matvec.cu  kernels_turboquant.cu  kernels_weight_only_matvec.cu
src/model/: hf_bpe_tokenizer.cpp  safetensors_loader.cpp  tokenizer.cpp  weight_loader.cpp
src/platform/: mmap_file.cpp
src/runtime/: cuda_utils.cu  kv_cache.cpp  system_info.cpp
src/tests/: moe_kernel_parity_test.cu
src/tools/: cuda_bandwidth_bench.cu
tools/: check_stats.ps1  convert_hf_to_bins.py  eval_prompts.json  eval_prompts.py  hf_chat_worker.py  hf_download.py  hf_tokenizer_cli.py  moe_cuda_bench.py  pack_ll2c.py  quantize_ll2c_streaming.py  run_llama4_prompt.py  sentencepiece_cli.py  stop_llama.ps1  tq3_llama2_benchmark.py  tq3_smoke_test.py  turbo_quant_convert.py  validate_ll2c.py  validate_mixtral_production.py
tools/ci/: moe_gate_thresholds.json  moe_regression_gate.py
web/: .env.example  .runtime-state.json  api-example.json  config.example.json  index.html  package-lock.json  package.json  vite.config.js
web/server/: config.mjs  index.mjs  openai_compat.mjs  prompting.mjs
web/src/: App.jsx  index.css
web/src/lib/: chatStream.js
